--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,6 +2,9 @@ body {
     .main-logo {
         max-width: none;
     }
+    nav {
+        border-bottom: 2px groove;
+    }
     .home-img {
         width: 40%;
         display: block;
@@ -20,6 +23,11 @@ body {
         display: block;
         margin: 10px auto;
     }
+
+    footer {
+        background: #000;
+    }
+
 }
 
 @media only screen and (max-width: 700px) {
