--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,7 +19,7 @@ body {
         }
     }
     
-    .post-image {
+    .post-image, .post-image {
         display: block;
         margin: 10px auto;
     }
