--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,6 +12,43 @@ body {
     nav {
         border-bottom: 2px groove;
     }
+    .hero {
+        text-align: center;  
+
+        h2 {
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+        
+        p {
+            font-size: 1.6rem;
+            font-weight: 300;
+            margin: 0 auto 20px auto;
+        }
+      
+        .btn {
+            display: inline-block;
+            margin-top: 40px;
+            padding: 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #000;
+            color: #fff;
+            font-size: 1.2rem;
+            font-weight: 400;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+        }
+      
+        .btn:hover {
+            background-color: #fff;
+            color: #000;
+        }
+      
+        .btn:active {
+            transform: scale(0.95);
+        }
+    }
     .home-img {
         width: 40%;
         display: block;
@@ -39,6 +76,20 @@ body {
 
 @media only screen and (max-width: 700px) {
     body {
+        main.container {
+            margin: 0 auto;
+            h1 {
+                font-size: 1.2rem;
+            }
+            .hero {
+                h2 {
+                    font-size: 1.5rem;
+                }
+                p, li, a, span {
+                    font-size: 1.4rem;
+                }
+            }
+        }
         .home-img {
             width: 100%;
         }    
