--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,16 @@
 body {
+    ul.styled {
+        padding-left: 20px;
+        li {
+            list-style: outside;
+        }
+    }
+    .aligncenter {
+        margin: 0 auto;
+    }
+    .post-link {
+        padding: 6% 52%;
+    }
     .style-none  {
         list-style: none;
         padding: 0;
@@ -53,7 +65,20 @@ body {
         width: 40%;
         display: block;
         margin: 50px auto;
-    }    
+    }  
+    .page-seo {
+        h1, h2 {
+            font-size: 1.5rem;
+        }
+        p, li, a, span {
+            font-size: 1.2rem
+        }
+    }
+    .single-blog-page {
+        h2 {
+            font-size: 1.5rem;
+        }
+    }  
     .posts {
         >div {
             display: inline-block;
@@ -76,6 +101,19 @@ body {
 
 @media only screen and (max-width: 700px) {
     body {
+        .post-link {
+            padding: 3% 51%;
+        }
+        .page-seo {
+            h1, h2 {
+                font-size: 1.2rem;
+            }
+        }
+        .single-blog-page {
+            h2 {
+                font-size: 1.2rem;
+            }
+        }
         main.container {
             margin: 0 auto;
             h1 {
