--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,5 @@
 body {
-    .post-menu {
+    .post-menu, .proekti-menu {
         li {
             display: inline-block;
             margin: 0 15px;
@@ -140,6 +140,18 @@ body {
         background: #000;
     }
 
+}
+
+.proekti-page, .el-mag-page {
+    .post-menu {
+        display: none;
+    }
+}
+
+.blog-page, .wordpress-post-page, .page-seo {
+    .proekti-menu {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 700px) {
