--- a/styles/main.scss
+++ b/styles/main.scss
@@ -143,13 +143,13 @@ body {
 }
 
 .proekti-page, .el-mag-page {
-    .post-menu {
+    .post-menu, .post-button {
         display: none;
     }
 }
 
 .blog-page, .wordpress-post-page, .page-seo {
-    .proekti-menu {
+    .proekti-menu, .projects-button {
         display: none;
     }
 }
