--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,8 @@
 body {
+    .page-img {
+        display: block;
+        margin: 50px auto;
+    }
     .project-title {
         display: block;
     }
